2004-12-17  Jackson Harper  <jackson@ximian.com>

	* XplatUIX11.cs: When generating mouse wparams get the modifier
	keys from the ModifierKeys property.

2004-12-17  Jackson Harper  <jackson@ximian.com>

	* X11Keyboard.cs: Send up/down input when generating
	messages. Remove some unused vars.

2004-12-17  Jackson Harper  <jackson@ximian.com>

	* TabControl.cs:
	* TreeView.cs: get rid of warnings.

2004-12-17  Jackson Harper  <jackson@ximian.com>

	* XplatUIStructs.cs: Fix a couple wrong virtual keycodes.

2004-12-17  Jordi Mas i Hernandez <jordi@ximian.com>

	* ListBox.cs: bug fixes, changes for CheckedListBox.cs
	  CheckedListBox.cs: Implementation

2004-12-17  Peter Bartok  <pbartok@novell.com>

	* TextControl.cs (RecalculateLine): Fixed baseline aligning calcs

2004-12-16  Peter Bartok  <pbartok@novell.com>

	* TextControl.cs:
	  - InsertCharAtCaret(): Fixed start pos fixup
	  - CaretLine_get: No longer derives the line from the tag, the tag
	    could be stale if lines in the document have been added or deleted
	  - RebalanceAfterDelete(): Fixed bug in balancing code
	  - RebalanceAfterAdd(): Fixed really stupid bug in balancing code
	  - Line.Streamline(): Now can also elminate leading empty tags
	  - DumpTree(): Added a few more tests and prevented exception on
	    uninitialized data
	  - Added Debug section for Combining lines
	  - Delete(): Now copies all remaining properties of a line
	  
	* TextBoxBase.cs: 
	  - Left mousebutton now sets the caret (and middle button still acts 
	    as formatting tester, which must go away soon)
	  - Added Debug section for Deleting/Combining lines
	  - Fixed calculations for UpdateView after Combining lines

2004-12-16  Peter Bartok  <pbartok@novell.com>

	* TextControl.cs: Now properly aligns text on a baseline, using the
	  new XplatUI.GetFontMetrics() method. Simplified several calculations
	* TextBoxBase.cs: Moved #endif to allow compiling if Debug is not 
	  defined

2004-12-16  Peter Bartok  <pbartok@novell.com>
