@@ -1,5 +1,9 @@
 2004-12-17  Jackson Harper  <jackson@ximian.com>
 
+	* XplatUIX11.cs: Prune old keyboard code.
+
+2004-12-17  Jackson Harper  <jackson@ximian.com>
+
 	* XplatUIX11.cs: When generating mouse wparams get the modifier
 	keys from the ModifierKeys property.
 
